# 42sh-project

./: Makefile.am  configure.ac
doc/: Doxyfile
src/: Makefile.am  main.c
src/builtins/: Makefile.am  builtin.h  cd.c  dot.c  echo.c  exit.c  false.c  true.c
src/lexer_parser/: Makefile.am
src/lexer_parser/ast/: ast.c  ast.h
src/lexer_parser/eval/: eval.c  eval.h  pipe.c  redir.c
src/lexer_parser/lexer/: lexer.c  lexer.h  token.h
src/lexer_parser/parser/: parser.c  parser.h  parser_utils.c  parser_utils.h
src/utils/: Makefile.am  token_utils.c  token_utils.h  variable.c  variable.h
tests/: Makefile.am
tests/categories/echo/: command1.sh  command2.sh  command3.sh  fail.sh  in2  in3  in4  inlots  input2.sh  input4.sh  inputlots.sh  lotsofexpands.sh
tests/categories/if_else/: in1  in2  in3  input1.sh  input3.sh  inputtricky.sh  intricky
tests/categories/mass_produce/: 2 ifs.sh  2_ifs.sh  2_nl_between_echo.sh  and.sh  assign_and_use_var.sh  bad_fi_sep.sh  bad_then_sep.sh  bad_udo_sep.sh  bad_udone_sep.sh  bad_wdo_sep.sh  bad_wdone_sep.sh  big_arg.sh  cddash.sh  colliding_key_words.sh  comment_not_first.sh  complex_cd.sh  double_quote_at_the_end.sh  double_quote_at_the_start.sh  double_quotes_with_escaped_double_quote.sh  double_quotes_with_escaped_tab.sh  double_quotes_with_single_quotes_inside.sh  echo_mix_options_2.sh  embedded_ifs_1.sh  embedded_ifs_2.sh  empty_quotes.sh  empty_single_quotes.sh  exit_if.sh  fail_exit.sh  if_and_command.sh  if_elif_else.sh  if_false.sh  if_false_else.sh  if_true_else.sh  many_args.sh  mix_of_single_and_double_quotes.sh  multiple_quotes.sh  no_fi.sh  no_if.sh  no_then.sh  no_udo.sh  (+33 more)
tests/categories/tmp/: test_tmp  tmp.sh
tests/categories/true_false/: false.sh  true.sh
tests/categories/while_until/: in1  input1.sh
