TESTS = \
	./categories/echo/command1.sh \
	./categories/echo/command2.sh \
	./categories/echo/command3.sh \
	./categories/echo/lotsofexpands.sh \
	./categories/echo/fail.sh \
	./categories/echo/input1.sh \
	./categories/echo/input2.sh \
	./categories/echo/input3.sh \
	./categories/echo/input4.sh \
	./categories/echo/inputlots.sh \
	./categories/true_false/true.sh \
	./categories/true_false/false.sh \
	./categories/if_else/input1.sh \
	./categories/if_else/input2.sh \
	./categories/if_else/input3.sh \
	./categories/if_else/inputtricky.sh \
	./categories/while_until/input1.sh \
	./categories/mass_produce/simple_seq.sh \
	./categories/mass_produce/many_args.sh \
	./categories/mass_produce/big_arg.sh \
	./categories/mass_produce/non_existant.sh \
	./categories/mass_produce/2_nl_between_echo.sh \
	./categories/mass_produce/pipe.sh \
	./categories/mass_produce/comment_not_first.sh \
	./categories/mass_produce/colliding_key_words.sh \
	./categories/mass_produce/embedded_ifs_1.sh \
	./categories/mass_produce/embedded_ifs_2.sh \
	./categories/mass_produce/if_and_command.sh \
	./categories/mass_produce/if_false.sh \
	./categories/mass_produce/if_false_else.sh \
	./categories/mass_produce/if_true_else.sh \
	./categories/mass_produce/2_ifs.sh \
	./categories/mass_produce/empty_single_quotes.sh \
	./categories/mass_produce/empty_quotes.sh \
	./categories/mass_produce/multiple_quotes.sh \
	./categories/mass_produce/simple_quote.sh \
	./categories/mass_produce/spaces_as_args.sh \
	./categories/mass_produce/spaces_as_args.sh \
	./categories/mass_produce/echo_mix_options_2.sh \
	./categories/mass_produce/simple_single_quotes.sh \
	./categories/mass_produce/spaces_between_single_quotes.sh \
	./categories/mass_produce/single_quotes_with_escaped_single_quote.sh \
	./categories/mass_produce/single_quote_at_the_start.sh \
	./categories/mass_produce/single_quote_at_the_end.sh \
	./categories/mass_produce/single_quotes_with_escaped_tab.sh \
	./categories/mass_produce/simple_double_quotes.sh \
	./categories/mass_produce/spaces_between_double_quotes.sh \
	./categories/mass_produce/double_quotes_with_escaped_double_quote.sh \
	./categories/mass_produce/double_quote_at_the_start.sh \
	./categories/mass_produce/double_quote_at_the_end.sh \
	./categories/mass_produce/double_quotes_with_escaped_tab.sh \
	./categories/mass_produce/single_quotes_with_double_quotes_inside.sh \
	./categories/mass_produce/double_quotes_with_single_quotes_inside.sh \
	./categories/mass_produce/mix_of_single_and_double_quotes.sh \
	./categories/mass_produce/double_pipe.sh \
	./categories/mass_produce/single_pipe.sh \
	./categories/mass_produce/simple_cd.sh \
	./categories/mass_produce/cddash.sh \
	./categories/mass_produce/complex_cd.sh \
	./categories/mass_produce/simple_exit.sh \
	./categories/mass_produce/exit_if.sh \
	./categories/mass_produce/simple_redir.sh \
	./categories/mass_produce/simple_while.sh \
	./categories/mass_produce/simple_until.sh \
	./categories/mass_produce/simple_reredir.sh \
	./categories/mass_produce/simple_reverse_redir.sh \
	./categories/mass_produce/simple_and_redir.sh \
	./categories/mass_produce/simple_xor_redir.sh \
	./categories/mass_produce/simple_reverse_and_redir.sh \
	./categories/mass_produce/fail_exit.sh \
	./categories/mass_produce/pipe_fail.sh \
	./categories/mass_produce/redir_fail.sh \
	./categories/mass_produce/bad_then_sep.sh \
	./categories/mass_produce/bad_fi_sep.sh \
	./categories/mass_produce/no_then.sh \
	./categories/mass_produce/no_fi.sh \
	./categories/mass_produce/no_if.sh \
	./categories/mass_produce/if_elif_else.sh \
	./categories/mass_produce/bad_udo_sep.sh \
	./categories/mass_produce/bad_udone_sep.sh \
	./categories/mass_produce/no_udone.sh \
	./categories/mass_produce/no_udo.sh \
	./categories/mass_produce/no_until.sh \
	./categories/mass_produce/bad_wdo_sep.sh \
	./categories/mass_produce/bad_wdone_sep.sh \
	./categories/mass_produce/no_wdone.sh \
	./categories/mass_produce/no_wdo.sh \
	./categories/mass_produce/assign_and_use_var.sh \
	./categories/mass_produce/reassign_and_use_var.sh \
	./categories/mass_produce/and.sh \
	./categories/mass_produce/or.sh \
	./categories/mass_produce/no_while.sh

XFAIL_TESTS= \
	./categories/echo/fail.sh

check-local:
	
